cambios agregamos sitio de twitch

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola mi gente mi nombre es jose como estas
+        Hola amigos espero se encuentren muy bien un abrazo 
     </p>
 </body>
 </html>
